Add download material file api
